test_suite/alan-2022-examples/passing/000018_random.alan
source T function L1() to boolean begin call ggB(18) end begin call i(57 = 1); leave; get f7A8[5888400]; while 65681 do relax end end
