test_suite/alan-2022-examples/failing/008410_mutation.alan
source p5 function m4nB() to boolean call begin relax end begin relax end
